# stremio-core

./: .babelrc  .gitignore  .gitmodules  .npmignore  .travis.yml  Cargo.toml  LICENSE.md  README.MD  README.md  TODO.md  bridge.js  build.sh  clippy.toml  crates.js  help.html  index.html  package-lock.json  package.json  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js  worker.js
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  docs.yml  msrv.yml  prerelease.yml  publish.yml  release.yml  test.yml
docs/development/: help.html  index.html  search-index.js  settings.html  src-files.js
env-web/: Cargo.toml
env-web/src/: lib.rs
examples/: resource_request.rs  response.rs
implementors/lazy_static/: trait.LazyStatic.js
scripts/: build.sh  dev-build.sh
search.desc/stremio_core/: stremio_core-desc-0-.js
search.desc/stremio_watched_bitfield/: stremio_watched_bitfield-desc-0-.js
src/: analytics.rs  app_model.rs  constants.rs  deep_links.rs  env.rs  event.rs  lib.js  lib.rs  manifest.rs  model.rs  new_consts.rs  stremio_core_web.rs  tracks.rs  ui_event.rs  worker.js
src/addon_transport/: addon_transport.rs  legacy.rs  mod.rs  unsupported_transport.rs
src/analytics/: analytics.rs  mod.rs
src/deep_links/: error_link.rs  mod.rs
src/env/: env.rs  error.rs  mod.rs
src/libaddon/: mod.rs
src/middlewares/: addons.rs  catalog.rs  container.rs  context.rs  mod.rs  user.rs
src/model/: deep_links.rs  mod.rs  model.rs  serialize_catalogs_with_extra.rs  serialize_continue_watching_preview.rs  serialize_ctx.rs  serialize_data_export.rs  serialize_discover.rs  serialize_installed_addons.rs  serialize_library.rs  serialize_local_search.rs  serialize_meta_details.rs  serialize_player.rs  serialize_remote_addons.rs  serialize_streaming_server.rs  serializers.rs
src/models/: addon_details.rs  calendar.rs  catalog_with_filters.rs  catalogs_with_extra.rs  continue_watching_preview.rs  data_export.rs  installed_addons.rs  installed_addons_with_filters.rs  library_by_type.rs  library_items.rs  library_with_filters.rs  link.rs  local_search.rs  meta_details.rs  mod.rs  notifications.rs  player.rs  streaming_server.rs  updateFeeds.js  update_feed_js.rs
src/runtime/: effects.rs  env.rs  environment.rs  mod.rs  runtime.rs  update.rs
src/state_types/: actions.rs  catalogs.rs  chain.rs  container.rs  container_handler.rs  container_muxer.rs  effects.rs  environment.rs  final_handler.rs  middleware.rs  mod.rs  reduce.rs  runtime.rs  state_container.rs  update.rs
src/stremio_analytics/: lib.rs.html
src/types/: mod.rs  (+20 more)
static/: state_container_web.wasm  stremio_core_web.wasm  stremio_core_web_bg.wasm  stremio_state_container_web.wasm
static.files/: main-ccceecc34bb68766.js  settings-cd1be5fcaa86d99b.css
stremio-analytics/: Cargo.toml
stremio-core-web/: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml
stremio-core-web/.cargo/: config.toml
stremio-core-web/.github/workflows/: build.yml  publish.yml
stremio-core-web/chore/prepare-stremio-core-web-release/: stremio-stremio-core-web-0.47.8.tgz
stremio-core-web/development/: stremio-stremio-core-web-0.47.7.tgz  stremio-stremio-core-web-0.47.8.tgz
stremio-core-web/feat/calendar-model/: stremio-stremio-core-web-0.47.7.tgz  stremio-stremio-core-web-0.47.8.tgz
stremio-core-web/feat/external-moonplayer-url-support-for-ios/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/feat/install-addons-model-supports-full-descriptor/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/feat/installed-addons-with-filters-flags-descriptor/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/feat/move-stremio-core-web/: stremio-stremio-core-web-0.47.4.tgz
stremio-core-web/feat/separate-seek-user-action/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/feat/serialize-model-separatelly-from-creating-it/: stremio-stremio-core-web-0.47.4.tgz  stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/feat/stream-and-subtitle-relative-url/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/feature-streaming-server-url-bucket/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/fix/latest-rust-stable-clippy-docs-warnings/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/fix/player-underflow/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/fix/server-missing-proxy_streams_enabled-settings-key/: stremio-stremio-core-web-0.47.7.tgz
stremio-core-web/scripts/: build.sh
stremio-core-web/src/: bridge.js  env.rs  lib.rs  stremio_core_web.rs  worker.js
stremio-core-web/src/model/: mod.rs  model.rs  serialize_calendar.rs  serialize_catalogs_with_extra.rs  serialize_continue_watching_preview.rs  serialize_ctx.rs  serialize_data_export.rs  serialize_discover.rs  serialize_installed_addons.rs  serialize_library.rs  serialize_local_search.rs  serialize_meta_details.rs  serialize_player.rs  serialize_remote_addons.rs  serialize_streaming_server.rs
stremio-core-web/src/model/deep_links_ext/: addons_deep_links.rs  calendar_deep_links.rs  deep_links_ext.rs  discover_deep_links.rs  library_deep_links.rs  library_item_deep_links.rs  meta_item_deep_links.rs  mod.rs  search_history_deep_links.rs  stream_deep_links.rs  video_deep_links.rs
stremio-deeplinks/: Cargo.toml
stremio-deeplinks/src/: lib.rs
stremio-derive/: Cargo.toml
stremio-pentest-addons/: index.json
stremio-watched-bitfield/: Cargo.toml  README.md
stremio-watched-bitfield/src/: bitfield8.rs  error.rs  lib.rs  watched_bitfield.rs
stremio_analytics/: all.html  index.html  sidebar-items.js  struct.Analytics.html
stremio_core/: all.html  derive.Model.html  index.html  sidebar-items.js
stremio_core_web/: all.html  index.html
stremio_derive/: all.html  constant.CORE_CRATE_ORIGINAL_NAME.html  derive.Model.html  fn.get_core_ident.html  index.html  sidebar-items.js
stremio_watched_bitfield/: all.html  index.html  sidebar-items.js  struct.BitField8.html  struct.Error.html  struct.WatchedBitField.html  struct.WatchedField.html
(+3400 files in other folders)
