[package]
name = "env-web"
version = "0.1.0"
edition = "2018"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
http = "0.1"
wasm-bindgen = { version = "0.2.65", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.3"
js-sys = "0.3"
stremio-core = { path = "../" }

[dependencies.web-sys]
version = "0.3"
features = [
	'Window',
	'Request',
	'RequestInit',
	'Response',
	'Storage'
]
