[package]
name = "stremio-core-web"
version = "0.47.7"
authors = ["Smart Code OOD"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["wasm"]
# enable TRACE level of logging in the crate using `tracing`.
log-trace = []

# enable wasm bindings exports
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:gloo-utils", "dep:console_error_panic_hook", "dep:js-sys", "dep:web-sys", "dep:getrandom", "getrandom?/js"]

[dependencies]
stremio-core = { version = "0.1", features = ["derive", "analytics"], path = "../" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
futures = "0.3.*"
http = "0.2.*"
url = { version = "2.4.*", features = ["serde"] }
chrono = "0.4.*"
semver = { version = "1", features = ["serde"] }
regex = "1.8"
hex = "0.4.*"
either = "1.6.*"
lazy_static = "1.4.*"
enclose = "1.1.*"
itertools = "0.10.*"
boolinator = "2.4.*"
Inflector = "0.11.*"
wasm-bindgen = { version = "=0.2.78", features = ["serde-serialize"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-utils = { version = "0.2", features = ["serde"], optional = true }

# panic hook for wasm
console_error_panic_hook = { version = "0.1.*", optional = true }

js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "WorkerGlobalScope",
    "WorkerNavigator",
    "Request",
    "RequestInit",
    "Response",
    "console",
], optional = true }
getrandom = { version = "0.2", optional = true }
cfg-if = "1.0"
serde_path_to_error = "0.1.*"

# Tracing
tracing = "0.1"
tracing-wasm = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
