[package]
name = "stremio-watched-bitfield"
version = "0.1.0"
edition = "2021"
publish = false

# because of `dep:serde` supported after 1.60
rust-version = "1.60"

[lib]
doctest = false

[features]
default = ["serde"]

serde = ["dep:serde"]

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.*"
# (de)serialization of WatchedBitField
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", default-features = false }
